add page product

--- a/Tella_CMS/appsettings.json
+++ b/Tella_CMS/appsettings.json
@@ -1,6 +1,9 @@
 {
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=ADMIN;Database=Tella_CMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ADMIN;Database=Tella_CMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-N35Q0V8\\SQLEXPRESS;Database=Tella_CMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
