--- a/Tella_CMS/appsettings.json
+++ b/Tella_CMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ADMIN;Database=Tella_CMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.1.25,1433;Database=Tella_CMS; User Id=sa;Password=123456789* ;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
