--- a/Tella_CMS/Tella_CMS.csproj
+++ b/Tella_CMS/Tella_CMS.csproj
@@ -5,6 +5,10 @@
     <UserSecretsId>aspnet-Tella_CMS-65830384-E862-473C-B950-4C24D1672849</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\Tella_CMSContext.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
