--- a/Tella_CMS/Tella_CMS.csproj
+++ b/Tella_CMS/Tella_CMS.csproj
@@ -6,7 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\AspNetRoleClaims.cs" />
+    <Compile Remove="Models\AspNetRoles.cs" />
+    <Compile Remove="Models\AspNetUserClaims.cs" />
+    <Compile Remove="Models\AspNetUserLogins.cs" />
+    <Compile Remove="Models\AspNetUserRoles.cs" />
+    <Compile Remove="Models\AspNetUsers.cs" />
+    <Compile Remove="Models\AspNetUserTokens.cs" />
+    <Compile Remove="Models\Category.cs" />
+    <Compile Remove="Models\Customer.cs" />
+    <Compile Remove="Models\Order.cs" />
+    <Compile Remove="Models\Product.cs" />
     <Compile Remove="Models\Tella_CMSContext.cs" />
+    <Compile Remove="Models\TypeCustomer.cs" />
+    <Compile Remove="Models\TypeProduct.cs" />
+    <Compile Remove="Models\VipCard.cs" />
   </ItemGroup>
 
 
